--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,7 +3,8 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
             <h3>Edit your listing</h3>
-            <form method="post" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+            <form method="post" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation"
+                enctype="multipart/form-data">
 
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
@@ -29,8 +30,13 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="image" class="form-label">Image/URL</label>
-                    <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control">
+                    Orignal Listing Image <br>
+                    <img src="<%= orignalImageUrl%>" height="200px" width="400px">
+                </div>
+
+                <div class="mb-3">
+                    <label for="image" class="form-label">Upload New Image</label>
+                    <input name="listing[image]" type="file" class="form-control">
                 </div>
 
                 <div class="row">
