--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,9 @@
 <% layout("/layouts/boilerplate") -%>
+    <script>
+        const mapToken = '<%= process.env.MAP_TOKEN %>';
+        const coordinates = <% - JSON.stringify(listing.geometry.coordinates) %>
+    </script>
+
 
     <div class="row mt-3">
         <div class="col-8 offset-3">
@@ -8,7 +13,7 @@
 
         </div>
         <div class="card col-6 offset-3 show-card listing-card">
-            <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
+            <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
                 <p class="card-text"> Ownerd By :
                     <i>
@@ -73,28 +78,38 @@
                             <button class="btn btn-dark outline"> Submit</button>
                         </form>
                         <% } %>
-                            <p><b>All Reviews </b></p>
-                            <div class="row">
-                                <% for( review of listing.reviews) { %>
-                                    <div class="card col-5 ms-3 mb-3">
-                                        <div class="card-body">
-                                            <h5 class="card-title mt-3">
-                                                @<%= review.author.username %>
-                                            </h5>
-                                            <p class="card-text">
-                                                <%= review.comment %>
-                                            </p>
-                                            <p class="starability-result card-text" data-rating="<%=review.rating%>">
-                                            </p>
-                                            <br>
+
+                            <% if(listing.reviews.length> 0) { %>
+                                <div class="row">
+                                    <p><b>All Reviews </b></p>
+                                    <% for( review of listing.reviews) { %>
+                                        <div class="card col-5 ms-3 mb-3">
+                                            <div class="card-body">
+                                                <h5 class="card-title mt-3">
+                                                    @<%= review.author.username %>
+                                                </h5>
+                                                <p class="card-text">
+                                                    <%= review.comment %>
+                                                </p>
+                                                <p class="starability-result card-text"
+                                                    data-rating="<%=review.rating%>">
+                                                </p>
+                                                <br>
+                                            </div>
+                                            <form
+                                                action="/listings/<%=listing._id%>/reviews/<%= review._id %>?_method=DELETE"
+                                                class="mb-3" method="POST">
+                                                <button class="btn btn-sm btn-dark">Delete</button>
+                                            </form>
                                         </div>
-                                        <form
-                                            action="/listings/<%=listing._id%>/reviews/<%= review._id %>?_method=DELETE"
-                                            class="mb-3" method="POST">
-                                            <button class="btn btn-sm btn-dark">Delete</button>
-                                        </form>
-                                    </div>
-                                    <% } %>
-                            </div>
+                                        <% } %>
+                                </div>
+                                <% } %>
+                </div>
+                <div class="col-8 offset-3 mb-3">
+                    <h3>Where you'll be</h3>
+                    <div id="map"></div>
                 </div>
     </div>
+
+    <script src="/js/map.js"></script>
