--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,102 @@
 <% layout("/layouts/boilerplate") -%>
 
-    <h3>All Listings</h3>
-    <!-- <form action="/listings/new" method="GET">
-        <button>Create New Listing</button>
-    </form> -->
+    <style>
+        #filters {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+        .filter {
+            text-align: center;
+            margin-right: 1rem;
+            margin-top: 2rem;
+            opacity: 0.7;
+        }
+
+        .filter:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+
+        .filter p {
+            font-size: 0.8rem;
+        }
+
+        .tax-info {
+            display: none;
+        }
+
+        .tax-toggle {
+            border: 1px solid black;
+            border-radius: 1rem;
+            height: 3.25rem;
+            padding: 1rem;
+            margin-left: 3rem;
+            display: flex;
+            align-items: center;
+        }
+    </style>
+
+    <div id="filters">
+        <div class="filter">
+            <div> <i class="fa fa-fire" aria-hidden="true"></i></div>
+            <p>Trending</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa fa-bed" aria-hidden="true"></i></div>
+            <p>Rooms</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa fa-road" aria-hidden="true"></i></div>
+            <p>Iconic Cities</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-backpack2-fill"></i></div>
+            <p>Countryside</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-brightness-alt-high-fill"></i></div>
+            <p>Beach Side</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-cake-fill"></i></div>
+            <p>Birthday Rooms</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-water"></i></div>
+            <p>Awesom Pools</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-calendar2-heart"></i></div>
+            <p>Weekend</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-camera-fill"></i></div>
+            <p>Picture Place</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="bi bi-chat-right-heart-fill"></i></div>
+            <p>Go to Date!</p>
+        </div>
+
+        <div class="tax-toggle">
+            <div class="form-check-reverse form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
+            </div>
+        </div>
+    </div>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for (let listing of allListings) { %>
             <a href="/listings/<%= listing._id %>" class="listing-link">
                 <div class="card col listing-card">
@@ -17,8 +108,24 @@
                                 <%= listing.title %>
                             </b> <br>
                             &#8377; <%=listing.price.toLocaleString("en-IN")%> / Night
+                                <i class="tax-info">+18% GST</i>
                         </p>
                     </div>
                 </div>
                 <% } %>
     </div>
+
+    <script>
+        let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+        taxSwitch.addEventListener("click", () => {
+            let taxInfo = document.getElementsByClassName("tax-info");
+            for (info of taxInfo) {
+                if (info.style.display != "inline") {
+                    info.style.display = "inline";
+                } else {
+                    info.style.display = "none";
+                }
+
+            }
+        })
+    </script>
