--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
     <script>
         const mapToken = "<%= process.env.MAP_TOKEN %>";
-        const coordinates = "<%- JSON.stringify(listing.geometry.coordinates) %>";
+        // const coordinates = "<%- JSON.stringify(listing.geometry.coordinates) %>";
     </script>
 
 
@@ -106,6 +106,7 @@
                                 </div>
                                 <% } %>
                 </div>
+                <div id="map-data" data-coordinates='<%- JSON.stringify(listing.geometry.coordinates) %>'></div>
                 <div class="col-8 offset-3 mb-3">
                     <h3>Where you'll be</h3>
                     <div id="map"></div>
